--- a/style.css
+++ b/style.css
@@ -47,16 +47,19 @@ abbr,acronym { border: 0;
  * --------------------------------------- */
 /* BODY
  * --------------------------------------- */
+html {
+    height: 100%;
+}
+
 body{
 	font-family: arial,helvetica;
     font-size: 100%;
     background-color: #faf9f7;
+    height: 100%;
 }
 .wrapper{
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 0 0 0;
 	width: 100%;
-	position: relative;
 }
 /* TITLES & TEXT
  * --------------------------------------- */ 
@@ -92,8 +95,9 @@ p{
     background-color: #faf9f7;
     display: flex;
     position: relative;
-    min-height: 700px;
+    top: 0;
     height: 100%;
+    min-height: 700px;
 }
 #center {
     text-align:center;
@@ -106,6 +110,8 @@ p{
     background-image: url(img/cover2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    height: 100%;
+    width: 100%;
 }
 #YearinaBackpack {   
     
@@ -116,6 +122,7 @@ p{
 #WhoAreWe {
 }
 #WhatDoYouGet {
+    
 }
 
 #animation {
@@ -143,12 +150,12 @@ p{
 }
 #simon {
     display: block;
-   height: 100%;
+    height: 100%;
     margin-bottom: 1em;
 }
 #jakub {
     display: block;
-   height: 100%;
+    height: 100%;
     margin-bottom: 1em;
 }
 #Contact {
@@ -157,7 +164,7 @@ p{
     background-repeat: no-repeat;
 }
 .layer {
-    background-color: rgba(51,51,51, 0.4);
+    background-color: rgba(51,51,51, 0.3);
     position: absolute;
     top: 0;
     left: 0;
