--- a/_includes/sharer.html
+++ b/_includes/sharer.html
@@ -1,5 +1,5 @@
 <a href="https://twitter.com/intent/tweet/
-     &url={{ site.baseurl }}{{ page.url }}
+     &url={{ page.url }}
      &via=yearinabackpack
      &hashtags=backpackers, batuzkari"
    target="_blank">Share on Twitter</a>
