--- a/_includes/sharer.html
+++ b/_includes/sharer.html
@@ -1,5 +1,4 @@
-<a href="https://twitter.com/intent/tweet/
-     &url={{ page.url }}
-     &via=yearinabackpack
-     &hashtags=backpackers, batuzkari"
-   target="_blank">Share on Twitter</a>
+<a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}&hashtags=backpackers, batuzkari" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a>
+    <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>
+    <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
+</div>
