--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 </nav>
 
       
-    <div class="fill content">
+    <div class="fill content container-fluid">
       {{ content }}
     </div>
 
