--- a/css/main.css
+++ b/css/main.css
@@ -22,12 +22,13 @@ body, html {
 div.financials {
     margin-left: 10px;
     margin-right: 10px;
-    max-width: 650px;
+    min-width: 100%;
 }
 
 .financials iframe {
-    min-width: 100%;
     min-height: 400px;
+    width: 80%;
+    max-width: 650px;
 }
 
 
@@ -232,7 +233,8 @@ div#links img {
     border-top: 3px solid #eeeeee;
     background-color: rgba(245,245,245,0.7);
     height: 60px;
-    position:relative;
+    bottom: 0;
+    position:absolute;
     margin-bottom: 0;
 }
 
@@ -331,6 +333,7 @@ ul#photowall {
     left: 0;
     width: 100%;
     height: 100%;
+    max-height: 80%;
 }
 
 .container-post {
@@ -466,4 +469,37 @@ label {
 	text-align: left;
 	margin-right: 15px;
 	width: 100px;
+}
+.archive-item {
+    padding: 0.2em 0.5em 0.2em 0.5em;
+    border-radius: 3px;
+    margin-top: 0.5em;
+    border: 3px #cbbeb5 solid;
+    background: #cbbeb5;
+}
+a {
+    color: #0E2F44;
+}
+.pageNavigation {
+    width: 100%;
+}
+
+.pageNavigation:hover {
+    background-color: rgba(238, 238, 238, 1);
+}
+.pageNavigation>a {
+    display: block;
+    min-width: 100%;
+    border-top: 3px solid #eeeeee;
+    background-color: rgba(238, 238, 238, 0.5);
+    padding: 1em 1em 1em 1em;
+    position: relative;
+    color: black;
+    
+}
+div>.pageNavigation>a.next {
+    
+}
+
+div>.pageNavigation>a.prev {
 }
