changes to meta

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Backpacking adventure around America and Asia.">
+<meta name="keywords" content="{{page.tags}}, backpacking, travel, adventure">
+    <meta name="description" content="{{page.description}}">
     <meta name="author" content="Jakub Velfl and Simon Tomanik">
     <link rel="icon" href="/assets/icons/Yearinabackpack_logoblack_small.png">
 
-    <title>Year in a backpack</title>
+    <title>{{page.title}}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap_small.css" rel="stylesheet">
@@ -33,7 +34,7 @@
       <li><a href="/journal">Journal</a></li>
       <li><a href="/news">News</a></li> 
       <li><a href="/map">Map</a></li>
-      <li><a href="/pics">Pics</a></li>
+      <li><a href="/photo">Photo</a></li>
       <li><a href="/gear">Gear</a></li>
       <li><a href="/stats">Stats</a></li>
       <li><a href="/about">About</a></li>
