--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <link href="/css/bootstrap_small.css" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Lato:400,900" rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="/css/main.min.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
   </head>
 
   <body>
