--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
-	color: #181312;
+	color: #2B2120;
 }
 h1 {
     font-weight: 900;
