--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
-	color:#403736;
+	color:#373D3F;
 }
 h1 {
     font-weight: 900;
