--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,7 @@ body, html {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
     font-family: 'Droid Sans', 'serif';
+	background: #886451;
 }
 
 .container-fluid>iframe {
