--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body, html {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
     font-family: 'Droid Sans', 'serif';
-	background: #a3a3a3;
+	background: #cfcfcf;
 }
 
 .container-fluid>iframe {
