--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body, html {
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
     font-family: 'Droid Sans', 'serif';
-	background: #cfcfcf;
+	background: #eaeaea;
 }
 
 .container-fluid>iframe {
@@ -107,7 +107,7 @@ body {
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
-	color: #886451;
+	color: #10292E;
 }
 h1 {
     font-weight: 900;
