--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,3 +1,3 @@
   {% for tag in page.tags %}
-        <button class="tag-button"><a class="archive-title" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a></button>
+        <a class="button tag-button archive-title" href="{{ site.baseurl }}/tags#{{ tag | slugify }}">{{ tag }}</a>
 		 {% endfor %}
