--- a/css/main.css
+++ b/css/main.css
@@ -350,7 +350,7 @@ ul#photowall {
     padding: 0.2em 0.5em 0.2em 0.5em;
     border-radius: 3px;
     margin-top: 0.5em;
-	display: inline;
+	margin-bottom: 0.5em;
 }
 .tag-button {
     border: 1px #c0c0c0 solid;
