--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,8 @@ a.tag-button {
 }
 .tag-box {
     max-width: 70%;
+	display: inline-block;
+	line-height: 100%;
 }
 a.tag-button:hover {
     background: #737373;
