--- a/css/main.css
+++ b/css/main.css
@@ -226,11 +226,10 @@ div#links img {
 .archive-title {
   text-transform: capitalize;
 }
-ul.row {
-	display: inline-block;
-}
+
 #archive-child {
 	margin-top: 0.5em;
+	margin-bottom: 0.5em;
 }
 .content {
     margin-top: 40px;
