--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ p {
 a {
     font-weight: 500;
 }
-a, a:hover, a:active, a:visited {
+a, a:active, a:visited {
     text-decoration:none;
 }
 a:hover {
