--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,9 @@ layout: default
     {% if image.path contains page.img and image.path contains 'lead' %}
     {% unless image.path contains 'thumbnail' %}
     <a href="#links">
-        <img class="img-responsive" src="{{ site.baseurl }}{{ image.path }}" alt="{{ page.title }}"></a>
+        <img class="img-responsive" src="{{ site.baseurl }}{{ image.path }}" alt="{{ page.title }}">
+        <h2>{{ page.title }}</h2>
+    </a>
     {% endunless %}
     {% endif %}   
     {% endfor %}
