--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -44,7 +44,7 @@ layout: default
     {% if image.path contains page.img %}
         {% if image.path contains 'original' %}
         <a class="col-xs-6 col-sm-4 col-lg-3 nopadding gallery pull-left" href="{{ site.baseurl }}{{ image.path }}" alt="image.path">
-    <img class="gallery lazyload" data-src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" alt="image.path" />
+    <img class="gallery" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" alt="image.path" />
     </a>
         {% endif %}
    {% endif %}
