--- a/_includes/place-map.html
+++ b/_includes/place-map.html
@@ -1,4 +1,4 @@
-<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" id="GMaps" src="//www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
+<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" id="GMaps" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
       &zoom=10
       &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" width="80%" height="80%" frameborder="0">
   </iframe>
