--- a/_includes/place-map.html
+++ b/_includes/place-map.html
@@ -1,6 +1,6 @@
 <iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" id="GMaps" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
-      &zoom=6
-      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" width="80%" height="400px" min-height="80%" frameborder="0">
+      &zoom=5
+      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" height="400px" frameborder="0">
   </iframe>
 
 
