--- a/_includes/place-map.html
+++ b/_includes/place-map.html
@@ -1,6 +1,4 @@
-<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" id="GMaps" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
+<iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
       &zoom=5
-      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" height="400px" frameborder="0">
+      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" frameborder="0">
   </iframe>
-
-
