--- a/css/main.css
+++ b/css/main.css
@@ -222,9 +222,19 @@ body {
     height: 80%;    
 }
 
-#GMaps>div {
-    
-}
+.google-maps {
+        position: relative;
+        padding-bottom: 75%;
+        height: 0;
+        overflow: hidden;
+    }
+.google-maps iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+    }
 
 div#links img {
     width: 100%;
