--- a/_includes/place-map.html
+++ b/_includes/place-map.html
@@ -1,4 +1,6 @@
+<div class="google-maps">
 <iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/place?q={{ page.landmark }},%{{ page.categories }}
       &zoom=5
-      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" frameborder="0">
+      &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" width="600" height="450" frameborder="0">
   </iframe>
+</div>
