--- a/_includes/directions-map.html
+++ b/_includes/directions-map.html
@@ -1,6 +1,6 @@
 <div class="google-maps">  
-  <iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/directions?origin={{ page.origin }}+{{ page.categories }}
-      &destination={{ page.destination }}+{{ page.categories }}
+  <iframe class="center-block" style="padding-bottom:1.5em; padding-top: 1.5em;" src="https://www.google.com/maps/embed/v1/directions?origin={{ page.origin }}
+      &destination={{ page.destination }}
       &key=AIzaSyBZFMSA0kCVLsSCcIIXfTRhcJwKrBHLQeI" width="600" height="450" frameborder="0">
   </iframe>
 </div>
