--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+art-img: {{ site.baseurl }}{{ page.img }}/original/
 ---
 
 <meta name="geo.placename" content="{{ page.categories }}">
