--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,10 @@ ul#photowall {
     display: none;
     background: #fff;
 }
-
+.img-article {
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
+}
 .video-container {
     position: relative;
     padding-bottom: 56.25%;
