--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,12 @@ layout: default
 <meta name="geo.placename" content="{{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <link rel="stylesheet" href="/css/post.css">
-<script src="/js/jquery.lazysizes.min.js"></script>
+<script src="/js/jquery.unveil.js"></script>
+    <script>
+    $(function() {
+        $("img").unveil(300);
+    });
+    </script>
 
 <div class="container-fluid postHeader" id="textover">
     {% for image in site.static_files %}
