--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ layout: compress
       <link href="https://fonts.googleapis.com/css?family=Droid+Sans|Lato:400,900" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/css/main.css" rel="stylesheet">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+        <script src="/js/jquery-3.1.1.min.js"></script>
 
   </head>
 
