--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 <script src="/js/jquery.unveil.js"></script>
     <script>
     $(function() {
-        $("img").unveil(300);
+        $("img.lazy").unveil(300);
     });
     </script>
 
