--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,9 @@ layout: default
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <link rel="stylesheet" href="/css/post.css">
 <script src="/js/jquery.unveil.js"></script>
-    <script>
-    $(function() {
+    <script type="text/javascript">
+                jQuery(document).ready(function($) {
+                    $(function(){
         $("img.lazy").unveil(300);
     });
     </script>
