--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,10 +7,11 @@ layout: default
 <link rel="stylesheet" href="/css/post.css">
 <script src="/js/jquery.unveil.js"></script>
     <script type="text/javascript">
-                jQuery(document).ready(function($) {
-                    $(function(){
-        $("img.lazy").unveil(300);
+     $( document ).ready(function() {
+            $(function(){
+            $("img.lazy").unveil(300);
     });
+});                 
     </script>
 
 <div class="container-fluid postHeader" id="textover">
