--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <meta name="geo.placename" content="{{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <link rel="stylesheet" href="/css/post.css">
-<script src="/js/jquery.unveil.js"></script>
+<script src="{{ site.url }}/js/jquery.unveil.js"></script>
     <script type="text/javascript">
      $( document ).ready(function() {
             $(function(){
