--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <script type="text/javascript">
      $( document ).ready(function() {
             $(function(){
-            $("img#lazy").unveil(300);
+            $("img").unveil(300);
     });
 });                 
     </script>
