--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<meta name="geo.placename" content="{{ page.categories }}">
-<link rel="stylesheet" href="/css/blueimp-gallery.css">
-<link rel="stylesheet" href="/css/post.css">
+<meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
+<link rel="stylesheet" href="{{ site.url }}/css/blueimp-gallery.css">
+<link rel="stylesheet" href="{{ site.url }}/css/post.css">
 <script src="{{ site.url }}/js/jquery.unveil.js"></script>
     <script type="text/javascript">
      $(document).ready(function() {
