--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,8 @@ layout: default
 ---
 
 <meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
-<link rel="stylesheet" href="{{ site.url }}/css/blueimp-gallery.css">
-<link rel="stylesheet" href="{{ site.url }}/css/post.css">
-<script src="{{ site.url }}/js/jquery.unveil.js"></script>
+<link rel="stylesheet" href="/css/blueimp-gallery.css">
+<script src="/js/jquery.unveil.js"></script>
     <script type="text/javascript">
      $(document).ready(function() {
             $(function(){
@@ -14,7 +13,7 @@ layout: default
 });                 
     </script>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="jquery.unveil.js"></script>
 
     <script>
