--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,19 +7,10 @@ layout: default
 <script src="/js/jquery.unveil.js"></script>
     <script type="text/javascript">
      $(document).ready(function() {
-            $(function(){
-            $("img").unveil(300);
-    });
+            $(function() {
+    $("img.lazy").lazyload();
+});
 });                 
-    </script>
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="jquery.unveil.js"></script>
-
-    <script>
-    $(function() {
-        $("li img").unveil(300);
-    });
     </script>
 
 <div class="container-fluid postHeader" id="textover">
