--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
-<script src="/js/jquery.unveil.js"></script>
+<script src="/js/jquery.lazyload.min.js"></script>
     <script type="text/javascript">
      $(document).ready(function() {
             $(function() {
