--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,18 @@
 ---
 layout: default
 ---
-
+<head>
 <meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <script src="/js/jquery.lazyload.min.js"></script>
     <script type="text/javascript">
-     $(document).ready(function() {
+     $( document ).ready(function() {
             $(function() {
     $("img.lazy").lazyload();
 });
 });                 
     </script>
+</head>
 
 <div class="container-fluid postHeader" id="textover">
     {% for image in site.static_files %}
