--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,8 @@ layout: default
 <meta name="geo.placename" content="{{ landmark }}, {{ page.categories }}">
 <link rel="stylesheet" href="/css/blueimp-gallery.css">
 <script src="/js/jquery.lazyload.min.js"></script>
+<script src="/js/lazysizes.min.js"></script>
+
     <script type="text/javascript">  
         $(document).ready(function(){
 
