--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,17 @@
     transition: opacity 600ms;
 }
 
+.blur-up {
+        -webkit-filter: blur(5px);
+        filter: blur(5px);
+        transition: filter 400ms, -webkit-filter 400ms;
+    }
+
+.blur-up.lazyloaded {
+        -webkit-filter: blur(0);
+        filter: blur(0);
+    }
+
 .center {
     text-align:center;
     justify-content: center;
