--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
     {% if image.path contains page.img and image.path contains 'lead' %}
     {% unless image.path contains 'thumbnail' %}
     <a href="#links">
-        <img class="img-responsive lazyload blur-up" src="/{{ image.path | replace: 'original', 'thumbnail' }}" data-src="/{{ image.path }}"  alt="{{ page.title }}">
+        <img class="img-responsive lazyload blur-up" src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" data-src="{{ site.baseurl }}{{ image.path }}"  alt="{{ page.title }}">
     </a>
     {% endunless %}
     {% endif %}   
@@ -43,8 +43,8 @@ layout: default
 {% for image in site.static_files %}
     {% if image.path contains page.img %}
         {% if image.path contains 'original' %}
-        <a class="col-xs-6 col-sm-4 col-lg-3 nopadding gallery pull-left" href="/{{ image.path }}" alt="image.path">
-    <img class="gallery lazyload" data-src="/{{ image.path | replace: 'original', 'thumbnail' }}" alt="image.path" />
+        <a class="col-xs-6 col-sm-4 col-lg-3 nopadding gallery pull-left" href="{{ site.baseurl }}{{ image.path }}" alt="image.path">
+    <img class="gallery lazyload" data-src="{{ site.baseurl }}{{ image.path | replace: 'original', 'thumbnail' }}" alt="image.path" />
     </a>
         {% endif %}
    {% endif %}
