--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,4 @@
 <img data-src="/{{ page.img }}/original/{{ image-name }}" class="lazyload img-responsive center-block img-article" />
 <noscript>
-<img src="/{{ page.img }}/original/{{ image-name }}" class="img-responsive center-block img-article" />
+<img src="/{{ page.img }}/original/{{ include.image-name }}" class="img-responsive center-block img-article" />
 </noscript>
