--- a/_includes/image.html
+++ b/_includes/image.html
@@ -2,3 +2,8 @@
 <noscript>
 <img src="/{{ page.img }}/original/{{ include.image-name }}" class="img-responsive center-block img-article" />
 </noscript>
+
+<img data-src="/{{ page.img }}/original/{{ image-name }}" class="lazyload img-responsive center-block img-article" />
+<noscript>
+<img src="/{{ page.img }}/original/{{ image-name }}" class="img-responsive center-block img-article" />
+</noscript>
