--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,3 +1,5 @@
+<p>{{ include.image-name }}</p>
+
 <img data-src="/{{ page.img }}/original/{{ include.image-name }}" class="lazyload img-responsive center-block img-article" />
 <noscript>
 <img src="/{{ page.img }}/original/{{ include.image-name }}" class="img-responsive center-block img-article" />
