--- a/css/intro_white.css
+++ b/css/intro_white.css
@@ -11,7 +11,7 @@ body {
 
 @media only screen and (min-width: 800px) {
     body {
-    background-image: url(/assets/intro_cover/cover.jpg) no-repeat center center fixed; 
+    background: url(/assets/intro_cover/cover.jpg) no-repeat center center fixed; 
 }
 }
 
