--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@ layout: compress
 
   <body>
     <nav class="navbar navbar-fixed-top navbar-default">
-  <div class="container-fluid">
+  <div class="container">
     
       <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -50,7 +50,7 @@ layout: compress
   </div>
 </nav>
 
-    <div class="fill content">
+    <div class="fill content container-fluid">
       {{ content }}
     </div>
   </body>
