--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@ layout: compress
   </div>
 </nav>
 
-    <div class="fill content container-fluid">
+    <div class="fill content">
       {{ content }}
     </div>
   </body>
