--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,6 @@ layout: compress
 
   <body>
     <nav class="navbar navbar-fixed-top navbar-default">
-  <div class="">
     
       <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -47,10 +46,9 @@ layout: compress
     </ul>
   </div>
       
-  </div>
 </nav>
 
-    <div class="fill content">
+    <div class="fill content container-fluid">
       {{ content }}
     </div>
   </body>
