--- a/css/intro_white.css
+++ b/css/intro_white.css
@@ -20,6 +20,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+  height: 100%;
+  width: 100%;
 }
 .logo-main img {
     width: 50%;
