--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ body, html {
   width: 100%;
   overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
-    font-family: 'Droid Sans', 'serif';
+    font-family: Helvetica, 'serif';
 	background: #eaeaea;
 }
 
@@ -82,7 +82,7 @@ a.twitter-timeline {
   background-size: 1em 1em;
  
   /* Text */
-  font: normal 12px/18px 'Droid Sans', 'serif';
+  font: normal 12px/18px Helvetica, 'serif';
   color: #666666;
   white-space: nowrap;
 }
@@ -102,7 +102,7 @@ blockquote.twitter-tweet {
   border: #000 1px solid;
   border-top-color: #eee;
   border-bottom-color: #bbb;
-  font: bold 14px/18px 'Droid Sans', 'serif';;
+  font: bold 14px/18px Helvetica', 'serif';;
   color: #666666;
 }
  
@@ -132,7 +132,7 @@ body {
     font-size: 16px;
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Lato', sans-serif;
+    font-family: Helvetica, sans-serif;
 	color: #10292E;
 }
 h1 {
@@ -160,11 +160,11 @@ h6 {
     font-weight: 400;
 }
 ul.nav.navbar-nav {
-    font-family: 'Droid Sans', 'serif';
+    font-family: Helvetica, 'serif';
     font-weight: 700;
 }
 p {
-    font-family: 'Droid Sans', 'serif';
+    font-family: Helvetica, 'serif';
     font-weight: 300;
     font-size: 1.2em;
 }
