--- a/css/main.css
+++ b/css/main.css
@@ -440,7 +440,7 @@ a.button, .button {
     background: #2F7DED;
     color: white;
 }
-.instagram-button {
+.email-button {
 	border: 1px #6dc066 solid; 
 	color: #366033;
 }
