--- a/_includes/post-info.html
+++ b/_includes/post-info.html
@@ -1,5 +1,6 @@
 <ul class="list-inline">
-    <li><button class="button time-button">{{ page.date | date: "%-d %B %Y"}}</button></li>
+	<li class="button author-button">{{ page.author }}</li>
+	<li class="button time-button">{{ page.date | date: "%-d %B %Y"}}</li>
   {% if post %}
     {% assign categories = post.categories %}
   {% else %}
