--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,18 +1,20 @@
-<style type="text/css">
-.formbox-editor-766318 {margin: 0 auto;padding: 30px 40px;text-align: left;width: 100%;box-sizing: border-box;}
-.formbox-editor-766318 fieldset {border: none;margin: 0;padding: 0;position: relative;}
-.formbox-editor-766318 fieldset > input, .formbox-editor fieldset > textarea, .formbox-editable-field {margin: 10px 0;outline: none;}
-.formbox-title-766318 {background: none;border: none;color: #000;font-family: Helvetica, Arial, sans-serif;font-size: 20px;padding: 0;width: 100%;word-break: break-word;margin: 10px 0;}
-.formbox-title-766318 {border-radius: 0;min-height: 0;}
-input.formbox-field-766318 {border: 2px solid #f1f2f2;border-radius: 0;box-sizing: border-box;color: #000;font-family: Helvetica, Arial, sans-serif;font-size: 14px;padding: 15px;width: 100%;}
-input.field-error-766318 {border-color: #f15858;}
-input.formbox-button-766318 {background-color: #21292d;border-width: 0;border-style: solid;border-color: #21292d;border-radius: 8px;color: #fff;display: inline-block;font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
-button.formbox-button-766318 {background-color: #21292d;border-width: 0;border-style: solid;border-color: #21292d;border-radius: 8px;color: #fff;display: inline-block;font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
-.formbox-editor-766318{background-color:#ffffff !important;}
-.formbox-title-766318{font-family:Helvetica, Arial, sans-serif !important;font-size:20px !important;font-weight:bold !important;color:#10292e !important;text-align:left !important;}
-.formbox-button-766318{font-family:Helvetica, Arial, sans-serif !important;font-size:14px !important;font-weight:600 !important;color:#ffffff !important;background-color:#21292d !important;border-radius:2px !important;border-color:#21292d !important;border-width:0px !important;border-style:solid;}
- #tdLogo766318 img{margin-botton:10px; max-width:230px;}
+
+<style>
+.signup-name {
+ border-bottom: 1px blue solid;
+ }
+ .signup-email {
+  border-bottom: 1px green solid;
+ }
+ .signup {
+  display: inline;
+  width: 80%
+ }
+ .signup-button {
+    border: 1px #254f75 solid;
+ }
 </style>
+
 <script type="text/javascript">
 function CheckField766318(fldName, frm){ if ( frm[fldName].length ) { for ( var i = 0, l = frm[fldName].length; i < l; i++ ) {  if ( frm[fldName].type =='select-one' ) { if( frm[fldName][i].selected && i==0 && frm[fldName][i].value == '' ) { return false; }  if ( frm[fldName][i].selected ) { return true; } }  else { if ( frm[fldName][i].checked ) { return true; } }; } return false; } else { if ( frm[fldName].type == "checkbox" ) { return ( frm[fldName].checked ); } else if ( frm[fldName].type == "radio" ) { return ( frm[fldName].checked ); } else { frm[fldName].focus(); return (frm[fldName].value.length > 0); }} }
 function rmspaces(x) {var leftx = 0;var rightx = x.length -1;while ( x.charAt(leftx) == ' ') { leftx++; }while ( x.charAt(rightx) == ' ') { --rightx; }var q = x.substr(leftx,rightx-leftx + 1);if ( (leftx == x.length) && (rightx == -1) ) { q =''; } return(q); }
@@ -30,19 +32,19 @@ if ( !isemail(frm["fldEmail"].value) ) {
  return true; }
 </script>
 <div align="center">
-<div class="formbox-editor-766318" style="background: #fff; width: 320px;">
+<div class="signup formbox-editor-766318" style="background: transparent; width: 80%;">
 <form style="display:inline;" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
-<input type=hidden name=doubleoptin value="" /><fieldset><div class="formbox-title-766318">Backpackers Newsletter</div></fieldset>
+<input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title formbox-title-766318">Backpackers Newsletter</div></fieldset>
 <fieldset class="formbox-field-fname-766318">
-<input type=text placeholder="Your Name *" class="formbox-field-766318" name="fldfirstname" maxlength=100 />
+<input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" name="fldfirstname" maxlength=100 />
 </fieldset>
 <fieldset class="formbox-field-email-766318">
-<input type=text placeholder="Email Address *" class="formbox-field-766318" name="fldEmail" maxlength=100 />
+<input type=text placeholder="Email Address *" class="signup-email formbox-field-766318" name="fldEmail" maxlength=100 />
 </fieldset>
 
-<fieldset><button type="submit" id="btnSubmit" krydebug="1751" class="formbox-button-766318">Subscribe</button></fieldset></form>
+<fieldset><button type="submit" id="btnSubmit" krydebug="1751" class="button signup-button formbox-button-766318">Subscribe</button></fieldset></form>
 </div>
 </div>
