--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -32,13 +32,13 @@ if ( !isemail(frm["fldEmail"].value) ) {
  return true; }
 </script>
 <div align="center">
-<div class="signup formbox-editor-766318" style="background: transparent; width: 80%;">
-<form style="display:inline;" action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
+<div class="signup list-inline formbox-editor-766318" style="background: transparent; width: 80%;">
+<form action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
 <input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title formbox-title-766318">Backpackers Newsletter</div></fieldset>
-<fieldset class="formbox-field-fname-766318">
+<fieldset class="signup formbox-field-fname-766318">
 <input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" name="fldfirstname" maxlength=100 />
 </fieldset>
 <fieldset class="formbox-field-email-766318">
