--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -6,7 +6,7 @@
  .signup-email {
   border-bottom: 1px green solid;
  }
- .signup {
+ .signup, .signup fieldset, .signup input {
   display: inline;
   width: 80%
  }
