--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,10 +1,10 @@
 
 <style>
 .signup-name {
- border-bottom: 1px blue solid;
+ border-bottom: 1px #254f75 solid;
  }
  .signup-email {
-  border-bottom: 1px green solid;
+  border-bottom: 1px #254f75 solid;
  }
  .signup {
   display: table;
@@ -39,7 +39,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
 <input type=hidden name=token value="mFcQnoBFKMTGH%2Fh2SGYGneZXUawFafLCUAjPvVSGy9cF7QYrl9KV0w%3D%3D" />
-<input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title formbox-title-766318">Backpackers Newsletter</div></fieldset>
+<input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title formbox-title-766318"><h3>Backpackers Newsletter</h3></div></fieldset>
 <div class="input">
  <fieldset class="signup formbox-field-fname-766318">
 <input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" name="fldfirstname" maxlength=100 />
