--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -5,12 +5,15 @@
  }
  .signup-email {
   border-bottom: 1px #254f75 solid;
+  margin-left: 1em;
  }
  .signup {
   display: table;
+  color: #191919;
  }
  .input {
-  display: table-cell
+  display: table-cell;
+   color: #191919;
  }
  .signup-button {
     border: 1px #254f75 solid;
@@ -24,11 +27,10 @@
 .formbox-editor-766318 fieldset > input, .formbox-editor fieldset > textarea, .formbox-editable-field {margin: 10px 0;outline: none;}
 .formbox-title-766318 {background: none;border: none;padding: 0;width: 100%;word-break: break-word;margin: 10px 0;}
 .formbox-title-766318 {border-radius: 0;min-height: 0;}
-input.formbox-field-766318 {border: 1px solid #f1f2f2;border-radius: 0; display: table-cell; box-sizing: border-box;color: #191919;font-family: Helvetica, Arial, sans-serif;font-size: 14px;padding: 15px;width: 100%;}
+input.formbox-field-766318 {border: 1px solid #f1f2f2;border-radius: 0; display: table-cell;color: #191919;width: 100%;}
 input.field-error-766318 {border-color: #f15858;}
-input.formbox-button-766318 {color: #191919;display: table-cell; border: 1px solid #191919; font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
+input.formbox-button-766318 {color: #191919;display: table-cell; border: 1px solid #191919; margin: 0 1em;text-align: center;word-break: break-all;cursor: pointer;}
 button.formbox-button-766318 {color: #191919;display: table-cell; border: 1px solid #191919; font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
-.formbox-editor-766318{background-color:#ffffff !important;}
 </style>
 
 <script type="text/javascript">
