--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -27,10 +27,10 @@
 .formbox-editor-766318 fieldset > input, .formbox-editor fieldset > textarea, .formbox-editable-field {margin: 10px 0;outline: none;}
 .formbox-title-766318 {background: none;border: none;padding: 0;width: 100%;word-break: break-word;margin: 10px 0;}
 .formbox-title-766318 {border-radius: 0;min-height: 0;}
-input.formbox-field-766318 {border: 1px solid #f1f2f2;border-radius: 0; display: table-cell;color: #191919;width: 100%;}
+input.formbox-field-766318 {border: 1px solid #f1f2f2; border-radius: 0; color: #191919; width: 100%;}
 input.field-error-766318 {border-color: #f15858;}
-input.formbox-button-766318 {color: #191919;display: table-cell; border: 1px solid #191919; margin: 0 1em;text-align: center;word-break: break-all;cursor: pointer;}
-button.formbox-button-766318 {color: #191919;display: table-cell; border: 1px solid #191919; font-family: Helvetica, Arial, sans-serif;font-size: 14px;font-weight: 600;padding: 15px;margin: 10px 0;text-align: center;word-break: break-all;cursor: pointer;}
+input.formbox-button-766318 {color: #191919; background: transparent; border: 1px solid #191919; margin: 0 1em;text-align: center;word-break: break-all;cursor: pointer;}
+button.formbox-button-766318 {color: #191919; background: transparent; border: 1px solid #191919; text-align: center;word-break: break-all;cursor: pointer;}
 </style>
 
 <script type="text/javascript">
