--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -22,15 +22,172 @@
 
 
 <style type="text/css">
-.formbox-editor-766318 {margin: 0 auto;padding: 30px 40px;text-align: left;width: 100%;box-sizing: border-box;}
-.formbox-editor-766318 fieldset {border: none;margin: 0;padding: 0;position: relative;}
-.formbox-editor-766318 fieldset > input, .formbox-editor fieldset > textarea, .formbox-editable-field {margin: 10px 0;outline: none;}
-.formbox-title-766318 {background: none;border: none;padding: 0;width: 100%;word-break: break-word;margin: 10px 0;}
-.formbox-title-766318 {border-radius: 0;min-height: 0;}
-input.formbox-field-766318 {border: 1px solid #f1f2f2; border-radius: 0; color: #191919; width: 100%;}
-input.field-error-766318 {border-color: #f15858;}
-input.formbox-button-766318 {color: #191919; background: transparent; border: 1px solid #191919; margin: 0 1em;text-align: center;word-break: break-all;cursor: pointer;}
-button.formbox-button-766318 {color: #191919; background: transparent; border: 1px solid #191919; text-align: center;word-break: break-all;cursor: pointer;}
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-webkit-input-placeholder, textarea:focus::-webkit-input-placeholder {
+  color: #bbb5af;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-moz-placeholder, textarea:focus::-moz-placeholder {
+  color: #bbb5af;
+}
+
+input::placeholder, textarea::placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::placeholder, textarea::focus:placeholder {
+  color: #bbb5af;
+}
+
+input::-ms-placeholder, textarea::-ms-placeholder {
+  color: #aca49c;
+  font-size: 0.875em;
+}
+
+input:focus::-ms-placeholder, textarea:focus::-ms-placeholder {
+  color: #bbb5af;
+}
+
+/* on hover placeholder */
+
+input:hover::-webkit-input-placeholder, textarea:hover::-webkit-input-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-webkit-input-placeholder, textarea:hover:focus::-webkit-input-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::-moz-placeholder, textarea:hover::-moz-placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-moz-placeholder, textarea:hover:focus::-moz-placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::placeholder, textarea:hover:focus::placeholder {
+  color: #cbc6c1;
+}
+
+input:hover::placeholder, textarea:hover::placeholder {
+  color: #e2dedb;
+  font-size: 0.875em;
+}
+
+input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
+  color: #cbc6c1;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+  background: #e2dedb;
+  color: #b3aca7;
+}
+
+header {
+  position: relative;
+  margin: 100px 0 25px 0;
+  font-size: 2.3em;
+  text-align: center;
+  letter-spacing: 7px;
+}
+
+#form {
+  position: relative;
+  width: 500px;
+  margin: 50px auto 100px auto;
+}
+
+input {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  width: 470px;
+  height: 50px;
+  padding: 0px 15px 0px 15px;
+  
+  background: transparent;
+  outline: none;
+  color: #726659;
+  
+  border: solid 1px #b3aca7;
+  border-bottom: none;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+input:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+}
+
+textarea {
+  width: 470px;
+  max-width: 470px;
+  height: 110px;
+  max-height: 110px;
+  padding: 15px;
+  
+  background: transparent;
+  outline: none;
+  
+  color: #726659;
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  
+  border: solid 1px #b3aca7;
+  
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+
+textarea:hover {
+  background: #b3aca7;
+  color: #e2dedb;
+}
+
+#submit {
+  width: 502px;
+  
+  padding: 0;
+  margin: -5px 0px 0px 0px;
+  
+  font-family: 'Lato', sans-serif;
+  font-size: 0.875em;
+  color: #b3aca7;
+  
+  outline:none;
+  cursor: pointer;
+  
+  border: solid 1px #b3aca7;
+  border-top: none;
+}
+
+#submit:hover {
+  color: #e2dedb;
+}
 </style>
 
 <script type="text/javascript">
@@ -58,12 +215,12 @@ if ( !isemail(frm["fldEmail"].value) ) {
 <input type=hidden name=doubleoptin value="" /><fieldset><div class="signup-title formbox-title-766318"><h3>Backpackers Newsletter</h3></div></fieldset>
 <div class="input">
  <fieldset class="signup formbox-field-fname-766318">
-<input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" name="fldfirstname" maxlength=100 />
+<input type=text placeholder="Your Name *" class="signup-name formbox-field-766318" id="name" name="fldfirstname" maxlength=100 />
 </fieldset>
  </div>
  <div class="input">
 <fieldset class="formbox-field-email-766318">
-<input type=text placeholder="Email Address *" class="signup-email formbox-field-766318" name="fldEmail" maxlength=100 />
+<input type=text placeholder="Email Address *" class="signup-email formbox-field-766318" id="email" name="fldEmail" maxlength=100 />
 </fieldset>
  </div>
  <div class="input">
