--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -207,7 +207,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
  return true; }
 </script>
 <div class="center-block">
-<div class="signup list-inline formbox-editor-766318" style="background: transparent; width: 80%;">
+<div class="signup list-inline formbox-editor-766318" id="form" style="background: transparent; width: 80%;">
 <form action="https://lb.benchmarkemail.com//code/lbform" method=post name="frmLB766318" accept-charset="UTF-8" onsubmit="return _checkSubmit766318(this);" >
 <input type=hidden name=successurl value="http://www.benchmarkemail.com/Code/ThankYouOptin" />
 <input type=hidden name=errorurl value="http://lb.benchmarkemail.com//Code/Error" />
