--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -1,10 +1,10 @@
 
 <style>
 .signup-name {
- border-bottom: 1px #254f75 solid;
+ border-bottom, border-right: 1px #254f75 solid;
  }
  .signup-email {
-  border-bottom: 1px #254f75 solid;
+  border-bottom, border-right: 1px #254f75 solid;
   margin-left: 1em;
  }
  .signup {
@@ -97,8 +97,6 @@ input:hover:focus::-ms-placeholder, textarea:hover::focus:-ms-placeholder {
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  background: #e2dedb;
   color: #b3aca7;
 }
 
@@ -152,7 +150,6 @@ textarea {
   outline: none;
   
   color: #726659;
-  font-family: 'Lato', sans-serif;
   font-size: 0.875em;
   
   border: solid 1px #b3aca7;
@@ -164,7 +161,7 @@ textarea {
 }
 
 textarea:hover {
-  background: #b3aca7;
+  background: #92A7BA;
   color: #e2dedb;
 }
 
