--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -191,7 +191,7 @@ if ( !isemail(frm["fldEmail"].value) ) {
 </fieldset>
  </div>
  <div class="input">
-<fieldset><button type="submit" id="btnSubmit" krydebug="1751" class="button signup-button formbox-button-766318">Subscribe</button></fieldset></form>
+<fieldset><button type="submit" id="submit" krydebug="1751" class="button signup-button formbox-button-766318">Subscribe</button></fieldset></form>
  </div>
  </div>
 </div>
