--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -142,7 +142,7 @@ textarea:hover {
 }
 #submit {
   width: 502px;
-  
+  background: transparent;
   padding: 0;
   margin: -5px 0px 0px 0px;
   font-size: 0.875em;  
