--- a/_includes/signup.html
+++ b/_includes/signup.html
@@ -141,19 +141,8 @@ textarea:hover {
   color: black;
 }
 #submit {
-  width: 502px;
+  width: 70%;
   background: transparent;
-  padding: 0;
-  margin: -5px 0px 0px 0px;
-  font-size: 0.875em;  
-  outline:none;
-  cursor: pointer;
-  
-  border: solid 1px #b3aca7;
-  border-top: none;
-}
-#submit:hover {
-  color: #e2dedb;
 }
 </style>
 
